tests/parser/tests/cases/should_fail/missing_expression_in_function_call/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:11
1 |   l := f(a = );
  |             ^ here
  = note: Expected an expression.
